# facility-assignment-api

./: .gitignore  README.md  pyproject.toml  settings.toml
.github/workflows/: python-package.yml
.scripts/: checkup_scripts.sh
src/api/v1/: __init__.py  assignment_router.py
src/models/: __init__.py  assignment_problem.py  assignment_request.py  assignment_response.py  client.py  cost_problem.py  facility.py
src/services/: __init__.py
src/services/assignment_evaluator/: clients_dispersion.py  evaluate_assignments.py  service_area.py
src/services/assignment_solver/: flow_assignment_formulation.py  milp_assignment_formulation.py  solve_assignment_problem.py  utils.py
src/services/cost_calculator/: cost_matrix.py
tests/: conftest.py
tests/api/v1/: test_assignment_router.py
tests/models/: test_assignment_problem.py  test_assignment_request.py  test_client.py  test_cost_problem.py  test_facility.py
tests/models/data/: clients.json  facilities.json  map_request.html  map_response.html  request.json  response.json
tests/services/assignment_evaluator/: test_clients_dispersion.py  test_evaluate_assignments.py  test_service_area.py
tests/services/assignment_solver/: test_solve_assingment_problem.py  test_utils.py
tests/services/cost_calculator/: test_compute_cost_matrix.py  test_osrm_costs.py
